src/components/HowItWorks/HowItWorks.module.scss
.container {
  position: relative;
  padding-bottom: 10rem;
  margin-top: 6.5rem;
  .bg {
    max-width: 130rem;

    position: absolute;
    top: 0;
    right: -30rem;

    @media screen and (max-width: 1300px) {
      top: 1rem;
      max-width: 120rem;
    }
    img {
      width: 100%;
    }
  }

  .h2 {
    @media screen and (max-width: 1023px) {
      text-align: center;
      font-size: 6.2rem;
    }
  }

  .cards {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 3rem;
    row-gap: 4rem;

    @media screen and (max-width: 1023px) {
      display: block;
      padding: 2rem 8rem;

      & > *:not(:last-child) {
        margin-bottom: 8rem;
      }
    }
    @media screen and (max-width: 507px) {
      padding: 2rem;
    }
  }
}

